set margin to avoid overlapping

--- a/studyPal/src/pages/CreateSet/CreateSet.css
+++ b/studyPal/src/pages/CreateSet/CreateSet.css
@@ -7,7 +7,7 @@
 }
 .createSet-main {
     width: 100%;
-    margin-top: 50px;
+    margin: 50px 80px;
     display: flex;
     flex-direction: column;
     align-items: center;
